# BookVault

./: .env.sample  .gitignore  .isort.cfg  README.MD  Taskfile.yml  alembic.ini  app.py  config.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026-06-16_1933_initial_schema.py  2026-06-17_2343_add_file_path_to_book.py  2026-06-18_2301_add_keyword_tag.py
app/: config.py  logging_config.py  main.py
app/db/: __init__.py  base.py
app/handlers/: __init__.py  dependencies.py
app/handlers/books/: dependencies.py  sync.py  views.py
app/handlers/database/: views.py
app/handlers/home/: dependencies.py  views.py
app/models/: __init__.py  author.py  books.py  keyword_tag.py  language.py  publishers.py
app/repositories/: author_repo.py  base.py  book_repository.py  data_store.py  keyword_tag_repo.py  publisher_repo.py  tag_repository.py  uow.py
app/services/: directory_scanner.py  sync_service.py
app/services/importers/: __init__.py  base.py  context.py  djvu.py  epub.py  exceptions.py  filesystem.py  pdf.py  pipeline.py
db/: __init__.py  annotations.py  base.py  database.py  seed.py
handlers/: __init__.py  books.py  home.py
handlers/books/: dependencies.py  views.py
handlers/database/: views.py
handlers/home/: dependencies.py  views.py
importers/: __init__.py  base.py  djvu.py  epub.py  pdf.py
models/: __init__.py  author.py  books.py  language.py  publishers.py
static/css/: styles.css
templates/: add_books.html  base.html  book_view.html  books_list.html  index.html  navbar.html  tags.html
(+12 files in other folders)
