[project]
name = "BooksVault"
version = "0.1.0"
description = "BookVault is a simple tool for managing your books"
authors = [
    { name = "Alexey Yurko", email = "a.yurko@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "isort>=5.13.2",
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "ebooklib>=0.18",
    "pillow>=10.4.0",
    "uvicorn>=0.31.0",
    "python-multipart>=0.0.12",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.0",
    "jinja2>=3.1.4",
]

[tool.isort]
skip = ["env.py"]
skip_glob = ["alembic/versions/*.py", ".venv/**/*"]
src_paths = ["src"]
multi_line_output = 3
force_grid_wrap = 2
include_trailing_comma = true
line_length = 120

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "RUF", "I", "SIM", "UP", "FURB", "PIE", "PERF", "C4", "B", "PL", "S", "PTH118"]
lint.ignore = ["E501", "RUF013", "UP007", "B008", "D103", "D100", "D101", "D107", "D102", "D104", "Q000", "COM812", "G004", "N815"]


line-length = 122

exclude = [
    ".git",
    "__pycache__",
    "old",
    "inactive",
    "venv",
    "env",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
